test/example/controller/error/500_handler.js
module.exports = {
  get: (controller) => {
    throw Error('ERROR');
  }
};
